correction erreur de contraste

--- a/style.css
+++ b/style.css
@@ -651,7 +651,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #000000!important;
 }
 
 .container {
@@ -746,6 +746,10 @@ h4 {
     color: #FFFFFF!important;
 }
 
+.black{
+    color: #000000;
+}
+
 .portfolio-thumb {
     margin-bottom: 24px;
 }
@@ -786,7 +790,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #CB4B10;
     color: #FFFFFF!important;
 }
 
